objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>StudentCity__c</fullName>
        <label>StudentAddress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GlobalPickList_Cities</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>StudentCollege__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fk student with college name</description>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentInfo__c</fullName>
        <label>StudentInfo</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentMobile__c</fullName>
        <label>StudentMobile</label>
        <type>Phone</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Student_View1</fullName>
        <columns>NAME</columns>
        <columns>StudentCollege__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>Student_View1</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>StudentRecord1</fullName>
        <active>true</active>
        <label>StudentRecord1</label>
    </recordTypes>
    <recordTypes>
        <fullName>StudentRecord2</fullName>
        <active>true</active>
        <label>StudentRecord2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>validation_rule_1</fullName>
        <active>true</active>
        <errorConditionFormula>!  ISBLANK( Name )</errorConditionFormula>
        <errorMessage>please give the name</errorMessage>
    </validationRules>
</CustomObject>